--- a/Traffic_Viewer_Latest_Version/Traffic_Viewer/src/Landing_Page/LandingPageStyle.css
+++ b/Traffic_Viewer_Latest_Version/Traffic_Viewer/src/Landing_Page/LandingPageStyle.css
@@ -13,18 +13,145 @@ body {
     position: relative;
 }
 
+.loading_screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 0.3s ease;
+    opacity: 1;
+}
+
+.loading_screen .loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 5px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    padding: 10px;
+    width: fit-content;
+    height: fit-content;
+}
+
+.loading_screen .loading .red_sign {
+    width: 30px;
+    height: 30px;
+    background-color: red;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    animation: loading_opacity 1.5s infinite;
+    -webkit-animation: loading_opacity 1.5s infinite;
+    -moz-animation: loading_opacity 1.5s infinite;
+    -ms-animation: loading_opacity 1.5s infinite;
+    -o-animation: loading_opacity 1.5s infinite;
+    animation-delay: 0s;
+    transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -ms-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+}
+
+.loading_screen .loading .yellow_sign {
+    width: 30px;
+    height: 30px;
+    background-color: yellow;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    animation: loading_opacity 1.5s infinite;
+    -webkit-animation: loading_opacity 1.5s infinite;
+    -moz-animation: loading_opacity 1.5s infinite;
+    -ms-animation: loading_opacity 1.5s infinite;
+    -o-animation: loading_opacity 1.5s infinite;
+    animation-delay: 0.5s;
+    transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -ms-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+}
+
+.loading_screen .loading .green_sign {
+    width: 30px;
+    height: 30px;
+    background-color: green;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    animation: loading_opacity 1.5s infinite;
+    -webkit-animation: loading_opacity 1.5s infinite;
+    -moz-animation: loading_opacity 1.5s infinite;
+    -ms-animation: loading_opacity 1.5s infinite;
+    -o-animation: loading_opacity 1.5s infinite;
+    animation-delay: 1s;
+    transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -ms-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+}
+
+@keyframes loading_opacity {
+    0% {
+        opacity: 1;
+        transform: translateY(0);
+        -webkit-transform: translateY(0);
+        -moz-transform: translateY(0);
+        -ms-transform: translateY(0);
+        -o-transform: translateY(0);
+    }
+    50% {
+        opacity: 0.5;
+        transform: translateY(-5px);
+        -webkit-transform: translateY(-5px);
+        -moz-transform: translateY(-5px);
+        -ms-transform: translateY(-5px);
+        -o-transform: translateY(-5px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+        -webkit-transform: translateY(0);
+        -moz-transform: translateY(0);
+        -ms-transform: translateY(0);
+        -o-transform: translateY(0);
+    }
+}
+
 #logo img {
     width: 200px;
     height: 200px;
     margin-top: 8px;
+    cursor: pointer;
 }
 
 .header {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: rgb(161, 212, 196);
+    background-color: rgb(136, 204, 210);
     height: 80px;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
 }
 
 #navbar {
@@ -50,7 +177,7 @@ body {
 
 #mobile_navbar li a {
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: #fff;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -62,7 +189,7 @@ body {
 
 #navbar li a {
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: #fff;
     margin-left: 20px;
     margin-right: 20px;
     height: fit-content;
@@ -83,18 +210,22 @@ body {
 #navbar svg {
     width: 23px;
     height: 23px;
-    fill: rgb(7, 94, 94);
+    fill: rgb(20, 102, 89);
 }
 
 #navbar li:nth-child(1) a {
     background-color: rgb(10, 132, 181);
     box-shadow: 0 0 15px rgb(0, 183, 255);
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -o-border-radius: 15px;
-    padding: 5px 10px 10px 5px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    padding: 7.5px 10px 10px 5px;
+}
+
+#navbar li:nth-child(1) a svg {
+    fill: antiquewhite;
 }
 
 #navbar li:nth-child(2) a::after {
@@ -106,10 +237,15 @@ body {
     position: absolute;
     left: 8px;
     bottom: 0;
+    transition: all 0.2s ease-in-out;
     -webkit-border-radius: 30px;
     -moz-border-radius: 30px;
     -ms-border-radius: 30px;
     -o-border-radius: 30px;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -ms-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
 }
 
 #navbar li:nth-child(2) a:hover::after {
@@ -130,10 +266,19 @@ body {
     position: absolute;
     left: 5px;
     bottom: 0;
+    transition: all 0.2s ease-in-out;
     -webkit-border-radius: 30px;
     -moz-border-radius: 30px;
     -ms-border-radius: 30px;
     -o-border-radius: 30px;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -ms-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+}
+
+#navbar li:nth-child(3) a svg {
+    margin-right: 5px;
 }
 
 #navbar li:nth-child(3) a:hover::after {
@@ -174,10 +319,18 @@ body {
         display: none;
     }
 
+    .header {
+        border-radius: 0;
+        -webkit-border-radius: 0;
+        -moz-border-radius: 0;
+        -ms-border-radius: 0;
+        -o-border-radius: 0;
+    }
+
     #mobile_navbar {
         height: 0px;
         transition: height 0.4s;
-        background-color: rgb(161, 212, 196);
+        background-color: rgb(136, 204, 210);
         display: flex;
         list-style-type: none;
         flex-direction: column;
@@ -196,8 +349,12 @@ body {
         fill: rgb(7, 94, 94);
     }
 
+    #mobile_navbar li:nth-child(3) a svg {
+        padding-right: 5px;
+    }
+
     #mobile_navbar li a:hover {
-        background-color: rgb(98, 136, 136);
+        background-color: rgb(178, 232, 232);
     }
 
     #mobile_navbar_wrapper {
@@ -215,8 +372,8 @@ body {
 }
 
 #home .title_image img {
-    width: 600px;
-    height: 450px;
+    width: 800px;
+    height: 600px;
     margin-top: 80px;
     border-radius: 15px;
     -webkit-border-radius: 15px;
@@ -226,22 +383,26 @@ body {
 }
 
 #home .title h1 {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 35px;
+    font-family: "Donegal One", serif;
+    font-weight: 900;
+    font-style: normal;
+    font-size: 40px;
     text-transform: uppercase;
     margin-top: 100px;
 }
 
 #home .title p {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 12px;
+    font-size: 15px;
     margin-top: 20px;
     font-weight: 600;
 }
 
 #home .title button {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
+    font-family: "Zain", serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 25px;
     border: none;
     background-color: rgb(10, 132, 181);
     color: white;
@@ -252,8 +413,10 @@ body {
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
-    padding: 5px 10px 5px 10px;
     margin-top: 200px;
+    padding-left: 10px;
+    display: inline-flex;
+    align-items: center;
     cursor: pointer;
 }
 
@@ -266,9 +429,9 @@ body {
     -o-transition: 0.2s ease-in-out;
 }
 
-#home .title i {
-    margin-left: 10px;
-    margin-bottom: -4px;
+#home .title button i {
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 @media (max-width: 950px) {
@@ -311,6 +474,12 @@ body {
 
     #home .title {
         margin-top: 100px;
+    }
+}
+
+@media (min-width: 950px) and (max-width: 1320px) {
+    #home .title {
+        margin-left: 20px;
     }
 }
 
@@ -486,7 +655,11 @@ body {
 
 @media (min-width: 1200px) {
     .about_card img:nth-child(1) {
-        scale: 0.7;
+        scale: 0.65;
+        margin-top: 20px;
+    }
+    .about_card img:nth-child(2) {
+        scale: 0.9;
     }
 }
 
@@ -550,7 +723,7 @@ body {
     height: fit-content;
     margin: 0 auto;
     position: relative;
-    margin-bottom: 40px;
+    margin-bottom: 100px;
 }
 
 #members h1::after {
@@ -566,4 +739,297 @@ body {
     -moz-border-radius: 30px;
     -ms-border-radius: 30px;
     -o-border-radius: 30px;
+}
+
+.members_Slider {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 50px;
+    justify-content: center;
+}
+
+.members_Slider .member1 {
+    width: 300px;
+    height: 400px;
+    background-color: rgba(215, 242, 250, 0.821);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 20px;
+    text-align: center;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    margin-bottom: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    position: relative;
+    z-index: 1;
+}
+
+.members_Slider .member1 i,
+.members_Slider .member2 i,
+.members_Slider .member3 i,
+.members_Slider .member4 i,
+.members_Slider .member5 i,
+.members_Slider .member6 i,
+.members_Slider .member7 i,
+.members_Slider .member8 i {
+    font-size: 50px;
+    position: absolute;
+    top: 30px;
+    color: #00ffb3;
+}
+
+.members_Slider .member1 h1,
+.members_Slider .member2 h1,
+.members_Slider .member3 h1,
+.members_Slider .member4 h1,
+.members_Slider .member5 h1,
+.members_Slider .member6 h1,
+.members_Slider .member7 h1,
+.members_Slider .member8 h1 {
+    font-size: 30px;
+    position: absolute;
+    top: 90px;
+    font-family: "Zain", serif;
+    font-weight: 600;
+    font-style: normal;
+    color: #fff;
+}
+
+.members_Slider .member1 h2,
+.members_Slider .member2 h2,
+.members_Slider .member3 h2,
+.members_Slider .member4 h2,
+.members_Slider .member5 h2,
+.members_Slider .member6 h2,
+.members_Slider .member7 h2,
+.members_Slider .member8 h2 {
+    font-size: 20px;
+    position: absolute;
+    top: 170px;
+    color: rgb(41, 106, 85);
+}
+
+.members_Slider .member1 p,
+.members_Slider .member2 p,
+.members_Slider .member3 p,
+.members_Slider .member4 p,
+.members_Slider .member5 p,
+.members_Slider .member6 p,
+.members_Slider .member7 p,
+.members_Slider .member8 p {
+    font-size: 15px;
+    position: absolute;
+    top: 200px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.members_Slider .member1 button,
+.members_Slider .member2 button,
+.members_Slider .member3 button,
+.members_Slider .member4 button,
+.members_Slider .member5 button,
+.members_Slider .member6 button,
+.members_Slider .member7 button,
+.members_Slider .member8 button {
+    font-size: 18px;
+    font-weight: 700;
+    position: absolute;
+    bottom: 20px;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    color: #fff;
+    background-color: rgb(73, 174, 154);
+    font-family: "Zain", serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.members_Slider .member1 button:hover,
+.members_Slider .member2 button:hover,
+.members_Slider .member3 button:hover,
+.members_Slider .member4 button:hover,
+.members_Slider .member5 button:hover,
+.members_Slider .member6 button:hover,
+.members_Slider .member7 button:hover,
+.members_Slider .member8 button:hover {
+    background-color: rgb(52, 136, 120);
+    transition: 0.2s ease-in-out;
+    -webkit-transition: 0.2s ease-in-out;
+    -moz-transition: 0.2s ease-in-out;
+    -ms-transition: 0.2s ease-in-out;
+    -o-transition: 0.2s ease-in-out;
+}
+
+.members_Slider .member2 {
+    width: 300px;
+    height: 400px;
+    background-color: rgba(215, 242, 250, 0.821);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    position: relative;
+    z-index: 1;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+
+.members_Slider .member3 {
+    width: 300px;
+    height: 400px;
+    background-color: rgba(215, 242, 250, 0.821);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    position: relative;
+    z-index: 1;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+
+.members_Slider .member4 {
+    width: 300px;
+    height: 400px;
+    background-color: rgba(215, 242, 250, 0.821);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    position: relative;
+    z-index: 1;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+
+.members_Slider .member5 {
+    width: 300px;
+    height: 400px;
+    background-color: rgba(215, 242, 250, 0.821);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    position: relative;
+    z-index: 1;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+
+.members_Slider .member6 {
+    width: 300px;
+    height: 400px;
+    background-color: rgba(215, 242, 250, 0.821);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    position: relative;
+    z-index: 1;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+
+.members_Slider .member7 {
+    width: 300px;
+    height: 400px;
+    background-color: rgba(215, 242, 250, 0.821);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    position: relative;
+    z-index: 1;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+
+.members_Slider .member8 {
+    width: 300px;
+    height: 400px;
+    background-color: rgba(215, 242, 250, 0.821);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    border-radius: 20px;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    position: relative;
+    z-index: 1;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+
+.members_Slider .member1::after,
+.members_Slider .member2::after,
+.members_Slider .member3::after,
+.members_Slider .member4::after,
+.members_Slider .member5::after,
+.members_Slider .member6::after,
+.members_Slider .member7::after,
+.members_Slider .member8::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 150px;
+    top: 0;
+    left: 0;
+    background-color: rgb(0, 157, 181);
+    z-index: -1;
+    border-bottom-left-radius: 80px;
+    border-bottom-right-radius: 80px;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
 }
