--- a/Traffic_Viewer_Latest_Version/Traffic_Viewer/src/Landing_Page/LandingPageStyle.css
+++ b/Traffic_Viewer_Latest_Version/Traffic_Viewer/src/Landing_Page/LandingPageStyle.css
@@ -11,20 +11,26 @@ html {
 
 body {
     position: relative;
+    overflow: hidden;
 }
 
 .loading_screen {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: #fff;
-    z-index: 9999;
+    z-index: 100000;
     display: flex;
     justify-content: center;
     align-items: center;
     transition: opacity 0.3s ease;
+    -webkit-transition: opacity 0.3s ease;
+    -moz-transition: opacity 0.3s ease;
+    -ms-transition: opacity 0.3s ease;
+    -o-transition: opacity 0.3s ease;
+    overflow: hidden;
     opacity: 1;
 }
 
