--- a/Traffic_Viewer_Latest_Version/Traffic_Viewer/src/Landing_Page/LandingPageStyle.css
+++ b/Traffic_Viewer_Latest_Version/Traffic_Viewer/src/Landing_Page/LandingPageStyle.css
@@ -761,23 +761,50 @@ body {
 }
 
 #cards_wrapper {
-  overflow-x: hidden;
+  max-width: 1100px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .members_Slider {
-  width: fit-content;
-  height: fit-content;
-  display: flex;
-  flex-wrap: nowrap;
-  gap: 50px;
-  justify-content: center;
-  align-items: center;
-  transition: transform 0.5s;
-  margin: 25px;
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: calc((100% / 3) - 15px);
+  gap: 20px;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+}
+
+.members_Slider.dragging {
+  scroll-snap-type: none;
+  scroll-behavior: auto;
+}
+
+.members_Slider.dragging .card {
+  cursor: grab;
+  user-select: none;
+}
+
+.card {
+  scroll-snap-align: start;
+  cursor: pointer;
+}
+
+@media (max-width: 900px) {
+  .members_Slider {
+    grid-auto-columns: calc((100% / 2) - 30px);
+  }
+}
+
+@media (max-width: 600px) {
+  .members_Slider {
+    grid-auto-columns: calc(100%);
+  }
 }
 
 .members_Slider .member1 {
-  width: 300px;
+  /* width: 100%; */
   height: 400px;
   background-color: rgba(215, 242, 250, 0.821);
   display: flex;
@@ -794,7 +821,6 @@ body {
   -o-border-radius: 20px;
   position: relative;
   z-index: 1;
-  opacity: 0.7;
   transition: transform 0.5s, box-shadow 0.5s, opacity 0.5s;
   flex: 0 0 auto;
 }
@@ -904,7 +930,7 @@ body {
 }
 
 .members_Slider .member2 {
-  width: 300px;
+  /* width: 100%; */
   height: 400px;
   background-color: rgba(215, 242, 250, 0.821);
   display: flex;
@@ -919,13 +945,12 @@ body {
   z-index: 1;
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
-  opacity: 0.7;
   transition: transform 0.5s, box-shadow 0.5s, opacity 0.5s;
   flex: 0 0 auto;
 }
 
 .members_Slider .member3 {
-  width: 300px;
+  /* width: 100%; */
   height: 400px;
   background-color: rgba(215, 242, 250, 0.821);
   display: flex;
@@ -942,13 +967,12 @@ body {
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
-  opacity: 0.7;
   transition: transform 0.5s, box-shadow 0.5s, opacity 0.5s;
   flex: 0 0 auto;
 }
 
 .members_Slider .member4 {
-  width: 300px;
+  /* width: 100%; */
   height: 400px;
   background-color: rgba(215, 242, 250, 0.821);
   display: flex;
@@ -965,13 +989,12 @@ body {
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
-  opacity: 0.7;
   transition: transform 0.5s, box-shadow 0.5s, opacity 0.5s;
   flex: 0 0 auto;
 }
 
 .members_Slider .member5 {
-  width: 300px;
+  /* width: 100%; */
   height: 400px;
   background-color: rgba(215, 242, 250, 0.821);
   display: flex;
@@ -988,13 +1011,12 @@ body {
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
-  opacity: 0.7;
   transition: transform 0.5s, box-shadow 0.5s, opacity 0.5s;
   flex: 0 0 auto;
 }
 
 .members_Slider .member6 {
-  width: 300px;
+  /* width: 100%; */
   height: 400px;
   background-color: rgba(215, 242, 250, 0.821);
   display: flex;
@@ -1011,13 +1033,12 @@ body {
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
-  opacity: 0.7;
   transition: transform 0.5s, box-shadow 0.5s, opacity 0.5s;
   flex: 0 0 auto;
 }
 
 .members_Slider .member7 {
-  width: 300px;
+  /* width: 100%; */
   height: 400px;
   background-color: rgba(215, 242, 250, 0.821);
   display: flex;
@@ -1034,13 +1055,12 @@ body {
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
-  opacity: 0.7;
   transition: transform 0.5s, box-shadow 0.5s, opacity 0.5s;
   flex: 0 0 auto;
 }
 
 .members_Slider .member8 {
-  width: 300px;
+  /* width: 100%; */
   height: 400px;
   background-color: rgba(215, 242, 250, 0.821);
   display: flex;
@@ -1056,7 +1076,6 @@ body {
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
-  opacity: 0.7;
   transition: transform 0.5s, box-shadow 0.5s, opacity 0.5s;
   flex: 0 0 auto;
 }
@@ -1083,29 +1102,25 @@ body {
   border-top-left-radius: 20px;
 }
 
-#selected_member {
-  transform: scale(1.1);
-  box-shadow: 3px 3px 10px black;
-  opacity: 1;
-}
-
-.nav_btns {
+#nav_bars {
   display: flex;
   justify-content: center;
-  gap: 50px;
-  margin-top: 30px;
+  align-items: center;
+  gap: 70px;
+  margin-top: 50px;
 }
 
 .member_btn {
   font-family: "Zain", serif;
-  font-weight: 900;
+  font-weight: 700;
+  font-style: normal;
   font-size: 25px;
   border: none;
   background-color: rgb(10, 132, 181);
   color: white;
   box-shadow: 0 0 15px rgb(0, 183, 255);
   height: 50px;
-  padding: 20px;
+  width: 50px;
   border-radius: 5px;
   display: flex;
   justify-content: center;
