--- a/Traffic_Viewer_Latest_Version/Traffic_Viewer/src/Landing_Page/LandingPageStyle.css
+++ b/Traffic_Viewer_Latest_Version/Traffic_Viewer/src/Landing_Page/LandingPageStyle.css
@@ -147,7 +147,8 @@ body {
   width: 200px;
   height: 200px;
   margin-top: 8px;
-  cursor: pointer;
+  pointer-events: none;
+  user-select: none;
 }
 
 .header {
@@ -299,6 +300,7 @@ body {
 #hamburger-icon {
   margin-right: 5vw;
   display: none;
+  user-select: none;
 }
 
 #mobile_navbar_wrapper {
@@ -774,6 +776,7 @@ body {
   overflow-x: auto;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
+  scrollbar-width: none;
 }
 
 .members_Slider.dragging {
@@ -788,7 +791,6 @@ body {
 
 .card {
   scroll-snap-align: start;
-  cursor: pointer;
 }
 
 @media (max-width: 1100px) {
@@ -811,8 +813,14 @@ body {
   }
 }
 
-.members_Slider .member1 {
-  /* width: 100%; */
+.members_Slider .member1,
+.member2,
+.member3,
+.member4,
+.member5,
+.member6,
+.member7,
+.member8 {
   height: 400px;
   background-color: rgba(215, 242, 250, 0.821);
   display: flex;
@@ -937,157 +945,6 @@ body {
   -o-transition: 0.2s ease-in-out;
 }
 
-.members_Slider .member2 {
-  /* width: 100%; */
-  height: 400px;
-  background-color: rgba(215, 242, 250, 0.821);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  margin-bottom: 20px;
-  border-radius: 20px;
-  position: relative;
-  z-index: 1;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
-  transition: transform 0.5s, box-shadow 0.5s, opacity 0.5s;
-  flex: 0 0 auto;
-}
-
-.members_Slider .member3 {
-  /* width: 100%; */
-  height: 400px;
-  background-color: rgba(215, 242, 250, 0.821);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  margin-bottom: 20px;
-  border-radius: 20px;
-  position: relative;
-  z-index: 1;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
-  transition: transform 0.5s, box-shadow 0.5s, opacity 0.5s;
-  flex: 0 0 auto;
-}
-
-.members_Slider .member4 {
-  /* width: 100%; */
-  height: 400px;
-  background-color: rgba(215, 242, 250, 0.821);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  margin-bottom: 20px;
-  border-radius: 20px;
-  position: relative;
-  z-index: 1;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
-  transition: transform 0.5s, box-shadow 0.5s, opacity 0.5s;
-  flex: 0 0 auto;
-}
-
-.members_Slider .member5 {
-  /* width: 100%; */
-  height: 400px;
-  background-color: rgba(215, 242, 250, 0.821);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  margin-bottom: 20px;
-  border-radius: 20px;
-  position: relative;
-  z-index: 1;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
-  transition: transform 0.5s, box-shadow 0.5s, opacity 0.5s;
-  flex: 0 0 auto;
-}
-
-.members_Slider .member6 {
-  /* width: 100%; */
-  height: 400px;
-  background-color: rgba(215, 242, 250, 0.821);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  margin-bottom: 20px;
-  border-radius: 20px;
-  position: relative;
-  z-index: 1;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
-  transition: transform 0.5s, box-shadow 0.5s, opacity 0.5s;
-  flex: 0 0 auto;
-}
-
-.members_Slider .member7 {
-  /* width: 100%; */
-  height: 400px;
-  background-color: rgba(215, 242, 250, 0.821);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  margin-bottom: 20px;
-  border-radius: 20px;
-  position: relative;
-  z-index: 1;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
-  transition: transform 0.5s, box-shadow 0.5s, opacity 0.5s;
-  flex: 0 0 auto;
-}
-
-.members_Slider .member8 {
-  /* width: 100%; */
-  height: 400px;
-  background-color: rgba(215, 242, 250, 0.821);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-  border-radius: 20px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  position: relative;
-  z-index: 1;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
-  transition: transform 0.5s, box-shadow 0.5s, opacity 0.5s;
-  flex: 0 0 auto;
-}
-
 .members_Slider .member1::after,
 .members_Slider .member2::after,
 .members_Slider .member3::after,
@@ -1110,11 +967,11 @@ body {
   border-top-left-radius: 20px;
 }
 
-#nav_bars {
+#nav_btns {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 70px;
+  gap: 40px;
   margin-top: 30px;
 }
 
@@ -1122,21 +979,155 @@ body {
   font-family: "Zain", serif;
   font-weight: 700;
   font-style: normal;
-  font-size: 20px;
+  font-size: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: none;
-  background-color: rgb(10, 132, 181);
+  background-color: rgb(73, 174, 154);
   color: white;
   box-shadow: 0 0 15px rgb(0, 183, 255);
   height: 40px;
   width: 40px;
-  border-radius: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  border-radius: 50%;
   cursor: pointer;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
 }
 
 .member_btn:hover {
-  background-color: rgb(18, 108, 130);
+  background-color: rgb(55, 128, 114);
   transition: 0.2s ease-in-out;
+}
+
+.footer {
+  width: 100%;
+  height: 250px;
+  margin-top: 100px;
+  background-color: rgba(18, 115, 159, 0.429);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+}
+
+.footer .footer_content {
+  display: inline-flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  text-align: center;
+  gap: 200px;
+}
+
+@media (max-width: 1000px) {
+  .footer .footer_content {
+    flex-direction: column;
+    gap: 50px;
+  }
+
+  .footer {
+    height: auto;
+    padding-top: 50px;
+    overflow-x: hidden;
+  }
+}
+
+.footer .footer_content .ratingList select {
+  padding: 10px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  font-family: "Zain", serif;
+  font-size: 18px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  background-image: linear-gradient(45deg, transparent 50%, #007d60 50%),
+    linear-gradient(135deg, #007bff 50%, transparent 50%);
+  background-position: calc(100% - 20px) calc(1em + 2px),
+    calc(100% - 15px) calc(1em + 2px);
+  background-size: 5px 5px, 5px 5px;
+  background-repeat: no-repeat;
+  appearance: none;
+}
+
+.footer .footer_content .ratingList select option {
+  font-size: 16px;
+  padding: 5px;
+  color: #333;
+  background-color: rgba(18, 115, 159, 0.429);
+}
+
+.footer .footer_content .ratingList select option {
+  font-size: 16px;
+}
+
+.footer .footer_content .ratingList label button {
+  font-family: "Zain", serif;
+  font-size: 20px;
+  padding: 10px;
+  border: none;
+  background-color: rgb(24, 159, 168);
+  color: #fff;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+}
+
+.footer .footer_content .ratingList label button:hover {
+  background-color: rgb(0, 120, 129);
+  color: #fff;
+}
+
+.footer .footer_content .copyRight i {
+  padding-right: 5px;
+  color: #003c39;
+  font-size: 18px;
+}
+
+.footer .footer_content .copyRight {
+  font-family: "Zain", serif;
+  font-size: 25px;
+}
+
+.footer .footer_content .copyRight span {
+  font-weight: 800;
+  text-transform: uppercase;
+}
+
+.footer .footer_content .ratingAverage h1 {
+  font-family: "Zain", serif;
+  font-size: 50px;
+  font-weight: 500;
+  position: relative;
+}
+
+.footer .footer_content .ratingAverage h1::after {
+  content: " / 5";
+  position: absolute;
+  right: -30px;
+  top: 20px;
+  font-size: 30px;
+  font-weight: 900;
+  opacity: 0.5;
+}
+
+.footer .footer_content .ratingAverage h3 {
+  font-family: "Zain", serif;
+  font-size: 20px;
+  text-transform: uppercase;
+  font-weight: 900;
+  opacity: 0.5;
 }
