--- a/online/fa.css
+++ b/online/fa.css
@@ -6651,7 +6651,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: block;
-  src: url(/online/fa/fa-regular-400.woff2) format("woff2");
+  src: url("./fa/fa-regular-400.woff2") format("woff2");
 }
 .fa-regular,
 .far {
@@ -6668,7 +6668,7 @@
   font-style: normal;
   font-weight: 900;
   font-display: block;
-  src: url(/online/fa/fa-solid-900.woff2) format("woff2");
+  src: url("./fa/fa-solid-900.woff2") format("woff2");
 }
 .fa-solid,
 .fas {
@@ -6680,27 +6680,27 @@
   font-family: "Font Awesome 5 Free";
   font-display: block;
   font-weight: 900;
-  src: url(/online/fa/fa-solid-900.woff2) format("woff2");
+  src: url("./fa/fa-solid-900.woff2") format("woff2");
 }
 @font-face {
   /*save*/
   font-family: "Font Awesome 5 Free";
   font-display: block;
   font-weight: 400;
-  src: url(/online/fa/fa-regular-400.woff2) format("woff2");
+  src: url("./fa/fa-regular-400.woff2") format("woff2");
 }
 /*save*/
 @font-face {
   font-family: "FontAwesome";
   font-display: block;
-  src: url(/online/fa/fa-solid-900.woff2) format("woff2");
+  src: url("./fa/fa-solid-900.woff2") format("woff2");
 }
 
 @font-face {
   /*save*/
   font-family: "FontAwesome";
   font-display: block;
-  src: url(/online/fa/fa-regular-400.woff2) format("woff2");
+  src: url("./fa/fa-regular-400.woff2") format("woff2");
   unicode-range: u+f003, u+f006, u+f014, u+f016-f017, u+f01a-f01b, u+f01d,
     u+f022, u+f03e, u+f044, u+f046, u+f05c-f05d, u+f06e, u+f070, u+f087-f088,
     u+f08a, u+f094, u+f096-f097, u+f09d, u+f0a0, u+f0a2, u+f0a4-f0a7, u+f0c5,
