--- a/online/fonts.css
+++ b/online/fonts.css
@@ -4,7 +4,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("/online/fonts/m8JWjfRYea-ZnFz6fsK9FaRCTm4.woff2") format("woff2");
+  src: url("./fonts/m8JWjfRYea-ZnFz6fsK9FaRCTm4.woff2") format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
     U+2212, U+2215, U+FEFF, U+FFFD;
@@ -15,7 +15,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("/online/fonts/syk8-y9lm7soMNXNkA.woff2") format("woff2");
+  src: url("./fonts/syk8-y9lm7soMNXNkA.woff2") format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
     U+2212, U+2215, U+FEFF, U+FFFD;
@@ -26,7 +26,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url("/online/fonts/sykz-y9lm7soOG7ohS23-w.woff2") format("woff2");
+  src: url("./fonts/sykz-y9lm7soOG7ohS23-w.woff2") format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
     U+2212, U+2215, U+FEFF, U+FFFD;
@@ -37,7 +37,7 @@
   font-style: normal;
   font-weight: 800;
   font-display: swap;
-  src: url("/online/fonts/sykz-y9lm7soOHLrhS23-w.woff2") format("woff2");
+  src: url("./fonts/sykz-y9lm7soOHLrhS23-w.woff2") format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
     U+2212, U+2215, U+FEFF, U+FFFD;
@@ -48,7 +48,7 @@
   font-style: normal;
   font-weight: 900;
   font-display: swap;
-  src: url("/online/fonts/sykz-y9lm7soOFbqhS23-w.woff2") format("woff2");
+  src: url("./fonts/sykz-y9lm7soOFbqhS23-w.woff2") format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
     U+2212, U+2215, U+FEFF, U+FFFD;
