--- a/start/styles.css
+++ b/start/styles.css
@@ -30,7 +30,7 @@ body::before {
   position: absolute;
   width: 100%;
   height: 100vh;
-  background-image: url("/assets/images/start_bg2.webp");
+  background-image: url("../assets/images/start_bg2.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
